# github-starcleaner

./: .gitignore  Cargo.toml  README.md
GitHubStarCleaner.xcodeproj/: project.pbxproj
GitHubStarCleaner.xcodeproj/xcshareddata/xcschemes/: GitHub Star Cleaner.xcscheme
resources/: AppIcon.icns
scripts/: build-app.sh  create-icon.sh
src/: lib.rs  main.rs
src/models/: config.rs  mod.rs  repository.rs
src/services/: config.rs  github.rs  mod.rs
src/state/: app_state.rs  mod.rs
src/ui/: app_view.rs  colors.rs  mod.rs  repository_list.rs  repository_row.rs  setup_view.rs
xcode/: Info.plist  RustInputFiles.xcfilelist  lldb-init
