[package]
name = "github-starcleaner"
version = "0.1.0"
edition = "2024"
description = "A desktop application for batch managing and cleaning up GitHub starred repositories"
license = "MIT"

[dependencies]
# UI Framework
gpui = { version = "0.2", features = ["macos-blade"] }

# GitHub API
octocrab = "0.49"
tokio = { version = "1", features = ["full"] }

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Utilities
anyhow = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
open = "5"
