[package]
name = "github-starcleaner"
version = "0.1.0"
edition = "2024"
description = "A desktop application for batch managing and cleaning up GitHub starred repositories"
license = "MIT"

[dependencies]
# UI Framework (using native Metal backend)
gpui = "0.2"

# GitHub API
octocrab = "0.49"
tokio = { version = "1", features = ["full"] }

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Utilities
anyhow = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
open = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[package.metadata.bundle]
name = "GitHub Star Cleaner"
identifier = "com.github.starcleaner"
icon = ["resources/AppIcon.icns"]
category = "public.app-category.developer-tools"
short_description = "Batch manage and clean up GitHub starred repositories"
osx_minimum_system_version = "13.0"
